[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/Interface/Interface.gd" type="Script" id=1]
[ext_resource path="res://ui/Interface/sprites/arrow-32-64.png" type="Texture" id=2]

[node name="Interface" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 1.0
margin_right = 643.0
margin_bottom = 641.0
color = Color( 0.352941, 0.352941, 0.352941, 0.854902 )

[node name="MainTitle" type="Label" parent="."]
margin_left = 92.7044
margin_top = 260.0
margin_right = 317.704
margin_bottom = 274.0
rect_scale = Vector2( 2, 2 )
text = "Welcome to a Simple Puzzle Game"
align = 1
valign = 1

[node name="Start" type="Button" parent="."]
margin_left = 270.0
margin_top = 370.0
margin_right = 350.0
margin_bottom = 440.0
text = "Start"

[node name="Next" type="Button" parent="."]
visible = false
margin_left = 569.0
margin_top = 574.0
margin_right = 645.0
margin_bottom = 644.0
icon = ExtResource( 2 )
flat = true
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
